--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,4 +5,8 @@
 @import "global/container.scss";
 @import "global/title.scss";
 @import "global/page.scss";
+@import "global/button.scss";
 
+@import "blocks/main-header.scss";
+@import "blocks/navigation.scss";
+@import "blocks/first-screen.scss";
