--- a/src/sass/global/fonts.scss
+++ b/src/sass/global/fonts.scss
@@ -1,17 +1,20 @@
 @font-face {
-  // название шрифта(чтобы не запутаться лучше указать название папки со шрифтом)
   font-family: "Poppins", sans-serif;
-  // адрес шрифта и тип
   src: url("./../../public/fonts/Poppins-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  // название шрифта(чтобы не запутаться лучше указать название папки со шрифтом)
+  font-family: "Poppins", sans-serif;
+  src: url("./../../public/fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 600;
+}
+
+@font-face {
   font-family: "Titan One", sans-serif;
-  // адрес шрифта и тип
-  src: url("./../../public/fonts/TitanOne-Regular.ttf") format("truetype");
+  src: url("/public/fonts/TitanOne-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
