--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -3,4 +3,4 @@ $desktop-width: 1440px;
 
 // Colors
 $main-text-color: #3A426B;
-$main-bg-color: linear-gradient(180deg, #50C9EB 0%, #6DDAF9 100%);
+$main-bg-color: #6DDAF9;
