--- a/src/sass/global/fonts.scss
+++ b/src/sass/global/fonts.scss
@@ -18,3 +18,10 @@
   font-style: normal;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "Lato", sans-serif;
+  src: url("/public/fonts/lato-regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
