--- a/src/sass/blocks/benefit.scss
+++ b/src/sass/blocks/benefit.scss
@@ -18,7 +18,7 @@
 }
 
 .benefit__title {
-  font-family: "Titan One";
+  font-family: "Titan One", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
