--- a/src/sass/global/title.scss
+++ b/src/sass/global/title.scss
@@ -1,5 +1,5 @@
 .title {
-  font-family: "Titan One";
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
