--- a/src/sass/blocks/first-screen.scss
+++ b/src/sass/blocks/first-screen.scss
@@ -31,7 +31,7 @@
 }
 
 .first-screen__text {
-  font-family: "Titan One";
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 55px;
