--- a/src/sass/blocks/main-footer.scss
+++ b/src/sass/blocks/main-footer.scss
@@ -5,7 +5,7 @@
 
 .main-footer__text {
   text-align: center;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 140%;
