--- a/src/sass/global/button.scss
+++ b/src/sass/global/button.scss
@@ -1,5 +1,5 @@
 .button {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
