--- a/src/sass/global/fonts.scss
+++ b/src/sass/global/fonts.scss
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: "Poppins", sans-serif;
-  src: url("./../../public/fonts/Poppins-Regular.ttf") format("truetype");
+  font-family: "Poppins";
+  src: url("./../fonts/Poppins-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Poppins", sans-serif;
-  src: url("./../../public/fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-family: "Poppins";
+  src: url("./../fonts/Poppins-SemiBold.ttf") format("truetype");
   font-style: normal;
   font-weight: 600;
 }
 
 @font-face {
-  font-family: "Titan One", sans-serif;
-  src: url("/public/fonts/TitanOne-Regular.ttf") format("truetype");
+  font-family: "Titan One";
+  src: url("./../fonts/TitanOne-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Lato", sans-serif;
-  src: url("/public/fonts/lato-regular.ttf") format("truetype");
+  font-family: "Lato";
+  src: url("./../fonts/lato-regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
