--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-@import "global/fonts.scss";
+// @import "global/fonts.scss";
 @import "global/visually-hidden.scss";
 @import "global/variables.scss";
 @import "global/impurities.scss";
