--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,3 @@
-// @import "global/fonts.scss";
 @import "global/visually-hidden.scss";
 @import "global/variables.scss";
 @import "global/impurities.scss";
@@ -17,3 +16,16 @@
 @import "blocks/our-benefits.scss";
 @import "blocks/benefit.scss";
 @import "blocks/main-footer.scss";
+@import "blocks/about-game.scss";
+@import "blocks/banner.scss";
+@import "blocks/we-guarantee.scss";
+@import "blocks/road-map.scss";
+@import "blocks/progress-bar.scss";
+@import "blocks/step.scss";
+@import "blocks/economy.scss";
+@import "blocks/raritiens.scss";
+@import "blocks/slider.scss";
+@import "blocks/team.scss";
+@import "blocks/person-card.scss";
+@import "blocks/faq.scss";
+@import "blocks/social-media.scss";
