--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 
 @import "blocks/main-header.scss";
 @import "blocks/navigation.scss";
+@import "blocks/language-settings.scss";
 @import "blocks/first-screen.scss";
 @import "blocks/crypto-exchanges.scss";
 @import "blocks/our-uniqueness.scss";
