--- a/src/sass/blocks/navigation.scss
+++ b/src/sass/blocks/navigation.scss
@@ -15,6 +15,23 @@
   justify-content: space-between;
 }
 
+.navigation__link-item {
+  &--whitepaper {
+    position: relative;
+
+    &:hover .language-settings {
+      border: 2px solid #f8ab0e;
+      padding: 12px 16px;
+      height: 120px;
+    }
+
+    &:hover .language-settings__button {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+}
+
 .navigation__link {
   font-weight: 600;
   font-size: 16px;
@@ -22,4 +39,22 @@
 
   color: #ffffff;
   text-decoration: none;
+
+  &:hover {
+    color: #f8ab0e;
+  }
+
+  &:active {
+    color: #f8ab0e;
+  }
+
+  &:disabled {
+    color: #f8ab0e;
+  }
+
+  &:focus {
+    text-transform: uppercase;
+    color: #ffffff;
+    text-shadow: 0px 2px 0px #d57709;
+  }
 }
