--- a/src/sass/blocks/slider.scss
+++ b/src/sass/blocks/slider.scss
@@ -9,13 +9,47 @@
 .slider__item {
   width: 25%;
   opacity: 0.2;
+  transition: 0.5s;
+  display: none;
+
+  &:hover {
+    opacity: 0.4;
+    transform: scale(1.125);
+
+    & > .slider__img-container > .slider__img {
+      opacity: 0.8;
+      cursor: pointer;
+    }
+  }
+
+  &--shown {
+    @media (min-width: 1000px) {
+      display: block;
+    }
+  }
 
   &--active {
     width: 44%;
     opacity: 1;
 
+    @media (max-width: 1000px) {
+      display: block;
+      width: 80%;
+      margin: 0 auto;
+    }
+
     & .slider__img {
       opacity: 1;
+    }
+
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+      transform: scale(1);
+
+      & .slider__img-container .slider__img {
+        opacity: 1;
+      }
     }
   }
 }
@@ -57,8 +91,9 @@
   }
 
   &--active {
-    background: linear-gradient(270deg, #f7de0d 48.78%, #f7a50d 100%);
-    box-shadow: 0px 2px 0px #d57709;
+    animation-name: buttonChangeStatus;
+    animation-duration: 0.4s;
+    animation-fill-mode: forwards;
 
     &:hover {
       background: linear-gradient(270deg, #f7de0d 48.78%, #f7a50d 100%);
@@ -67,5 +102,16 @@
     &:active {
       background: linear-gradient(270deg, #f7de0d 48.78%, #f7a50d 100%);
     }
+  }
+}
+
+@keyframes buttonChangeStatus {
+  from {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 2px 0px #81beff;
+  }
+  to {
+    background: linear-gradient(270deg, #f7de0d 48.78%, #f7a50d 100%);
+    box-shadow: 0px 2px 0px #d57709;
   }
 }
