--- a/src/sass/blocks/team.scss
+++ b/src/sass/blocks/team.scss
@@ -12,4 +12,8 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 40px 32px;
   width: 100%;
+
+  @media(max-width: 1000px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
