--- a/src/sass/global/impurities.scss
+++ b/src/sass/global/impurities.scss
@@ -7,6 +7,7 @@
 @mixin button-none {
   background: none;
   border: none;
+  padding: 0;
 }
 
 @mixin wrapper($padding, $width: 100vw, $max-width: none) {
