--- a/src/sass/blocks/language-settings.scss
+++ b/src/sass/blocks/language-settings.scss
@@ -4,11 +4,11 @@
   background: #3a426b;
   box-shadow: 0px 6px 0px #d57709;
   border-radius: 24px;
-  min-width: 159px;
-  box-sizing: border-box;
+  min-width: 137px;
   height: 0;
   transition: 1s;
   top: 32px;
+  z-index: 1;
 }
 
 .language-settings__lang {
