--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,6 +1,7 @@
 // Media sizes
-$desktop-width: 1440px;
+$max-mobile-width: 850px;
+$desktop-width: 1200px;
 
 // Colors
-$main-text-color: #3A426B;
-$main-bg-color: #6DDAF9;
+$main-text-color: #3a426b;
+$main-bg-color: #6ddaf9;
