--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -1,3 +1,11 @@
 .main-header {
   padding: 32px 0 24px 0;
 }
+
+.main-header__mobile-menu-button {
+  display: none;
+}
+
+.main-header__mobile-menu-container {
+  width: 29%;
+}
