--- a/src/sass/blocks/benefit.scss
+++ b/src/sass/blocks/benefit.scss
@@ -8,11 +8,19 @@
   box-sizing: border-box;
 
   @media (max-width: 1100px) {
-    width: 416px;
+    width: 100%;
     margin: 0 auto;
 
     &:not(:last-child) {
       margin-bottom: 48px;
+    }
+  }
+
+  @media (max-width: $max-mobile-width) {
+    padding: 25px;
+
+    &:not(:last-child) {
+      margin-bottom: 24px;
     }
   }
 }
