--- a/src/sass/blocks/first-screen.scss
+++ b/src/sass/blocks/first-screen.scss
@@ -1,6 +1,10 @@
 .first-screen {
   padding: 90px 0 84px 0;
 
+  @media(max-width: $max-mobile-width) {
+    padding: 95px 0 125px 0;
+  }
+
   &::before {
     @include defaul-pseudo-element(100%, 63.26vw);
     background: url("./../../public/img/first-screen-bg.png") no-repeat center
@@ -12,9 +16,17 @@
     max-height: 1012px;
 
     @media (min-resolution: 2dppx) {
-      background: url("./../../public/img/first-screen-bg@2x.png") no-repeat
-        center center;
-      background-size: contain;
+      background-image: url("./../../public/img/first-screen-bg@2x.png");
+    }
+
+    @media(max-width: $max-mobile-width) {
+      height: 812px;
+      background-image: url("./../../public/img/first-screen-bg--mobile.png");
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("./../../public/img/first-screen-bg--mobile@2x.png");
+      }
     }
   }
 }
@@ -28,6 +40,10 @@
   color: #f8ab0e;
 
   @include margin-bottom(16px);
+
+  @media(max-width: $max-mobile-width) {
+    font-size: 14px;
+  }
 }
 
 .first-screen__text {
@@ -42,10 +58,23 @@
   max-width: 635px;
 
   @include margin-bottom(32px);
+
+  @media(max-width: $max-mobile-width) {
+    max-width: none;
+    font-size: 45px;
+  }
 }
 
 .first-screen__buttons-container {
   margin-bottom: 240px;
+
+  @media(max-width: $max-mobile-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2.3%;
+
+    margin-bottom: 370px;
+  }
 }
 
 .first-screen__button {
@@ -53,5 +82,11 @@
 
   &:first-child {
     margin-right: 16px;
+  }
+
+  @media(max-width: $max-mobile-width) {
+    padding: 16px 0;
+    margin: 0;
+    width: 100%;
   }
 }
