--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -1,9 +1,15 @@
 .main-header {
-  padding: 32px 0 24px 0;
+  padding-top: 32px;
+
+  @media (max-width: $max-mobile-width) {
+    padding-top: 12px;
+  }
 }
 
 .main-header__mobile-menu-button {
   display: none;
+  position: absolute;
+  right: 0;
 }
 
 .main-header__mobile-menu-container {
