--- a/src/sass/blocks/our-uniqueness.scss
+++ b/src/sass/blocks/our-uniqueness.scss
@@ -3,8 +3,21 @@
   display: grid;
   gap: 32px;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
+
   margin-bottom: 263px;
+
+  @media (max-width: $max-mobile-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0;
+    padding-top: 0;
+    margin-bottom: 120px;
+  }
+
+  @media (min-width: $max-mobile-width) {
+    align-items: center;
+  }
 }
 
 .our-uniqueness__title {
