--- a/src/sass/global/title.scss
+++ b/src/sass/global/title.scss
@@ -10,4 +10,9 @@
     line-height: 120%;
     letter-spacing: 0.01em;
   }
+
+  @media (max-width: $max-mobile-width) {
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
