--- a/src/sass/blocks/benefit.scss
+++ b/src/sass/blocks/benefit.scss
@@ -7,7 +7,7 @@
   padding: 40px;
   box-sizing: border-box;
 
-  @media (max-width: 1100px) {
+  @media (max-width: $max-mobile-width) {
     width: 100%;
     margin: 0 auto;
 
