--- a/src/sass/blocks/main-footer.scss
+++ b/src/sass/blocks/main-footer.scss
@@ -1,6 +1,19 @@
 .main-footer {
   background: #3a426b;
   padding: 80px 0;
+
+  @media (max-width: $max-mobile-width) {
+    padding: 80px 0 32px 0;
+    text-align: center;
+  }
+}
+
+.main-footer__container {
+  @media (max-width: $max-mobile-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .main-footer__text {
@@ -13,4 +26,33 @@
   color: #ffffff;
 
   opacity: 0.6;
+}
+
+.main-footer__navigation {
+  @media (max-width: $max-mobile-width) {
+    margin-bottom: 64px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    & .navigation__list {
+      margin-bottom: 40px;
+    }
+
+    & .navigation__link {
+      font-size: 16px;
+      line-height: 24px;
+      animation: none;
+    }
+
+    & .navigation__button {
+      width: 100%;
+    }
+
+    & .navigation__link--logo {
+      display: block;
+      margin: 0;
+      margin-bottom: 40px;
+    }
+  }
 }
