--- a/src/sass/blocks/our-benefits.scss
+++ b/src/sass/blocks/our-benefits.scss
@@ -13,7 +13,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
 
-  @media (max-width: 1100px) {
+  @media (max-width: $max-mobile-width) {
     flex-direction: column;
   }
 }
