--- a/src/sass/blocks/progress-bar.scss
+++ b/src/sass/blocks/progress-bar.scss
@@ -1,6 +1,14 @@
 .progress-bar {
   margin-bottom: 32px;
   position: relative;
+
+  @media (max-width: $max-mobile-width) {
+    position: absolute;
+    left: -160px;
+    top: 125px;
+    transform: rotate(90deg);
+    width: 100%;
+  }
 }
 
 .progress-bar__points-container {
@@ -15,6 +23,7 @@
 
   &--bg {
     background: rgba(255, 255, 255, 0.3);
+    z-index: -2;
   }
 
   &--progress {
@@ -22,6 +31,7 @@
     width: 15%;
     position: absolute;
     bottom: 0;
+    z-index: -1;
   }
 }
 
@@ -44,7 +54,14 @@
     background: #81beff;
     bottom: -40px;
     left: 37.5px;
-    z-index: -1;
+    z-index: -3;
+
+    @media (max-width: $max-mobile-width) {
+      transform: rotate(90deg);
+      height: 15px;
+      bottom: 12px;
+      left: 2px;
+    }
   }
 
   &::after {
@@ -55,6 +72,12 @@
     bottom: -48px;
     left: 27.5px;
     border: 1px solid #f7a50d;
+    z-index: 5;
+
+    @media (max-width: $max-mobile-width) {
+      bottom: 10px;
+      left: -27px;
+    }
   }
 
   &--quartal {
@@ -84,7 +107,6 @@
 
     &::before {
       background: #d57709;
-      bottom: -40px;
       left: -2px;
     }
 
@@ -93,7 +115,16 @@
         linear-gradient(226.3deg, #f8ab0e -12.22%, #ffffff 97.84%);
       left: -10px;
       border: none;
-      z-index: 2;
+
+      @media (max-width: $max-mobile-width) {
+        bottom: 10px;
+        left: -27px;
+      }
     }
+  }
+
+  @media (max-width: $max-mobile-width) {
+    transform: rotate(-90deg);
+    margin-left: 5px;
   }
 }
