--- a/src/sass/global/impurities.scss
+++ b/src/sass/global/impurities.scss
@@ -10,15 +10,11 @@
   padding: 0;
 }
 
-@mixin wrapper($padding, $width: 100vw, $max-width: true) {
+@mixin wrapper($padding, $width: 100vw, $max-width: 100vw) {
   padding: 0 $padding;
   width: calc($width - ($padding * 2));
   margin: 0 auto;
-  @if $max-width {
-    max-width: none;
-  } @else {
-    max-width: calc($max-width - ($padding * 2));
-  }
+  max-width: calc($max-width - ($padding * 2));
 }
 
 @mixin margin-bottom($margin) {
