--- a/src/sass/blocks/step.scss
+++ b/src/sass/blocks/step.scss
@@ -1,32 +1,60 @@
 .step {
-  background: linear-gradient(180deg, #c0eeff 44.04%, #9dd0ff 107.11%);
-  border: 3px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0px 10px 0px #5d9fe4, 0px 16px 24px rgba(9, 30, 62, 0.06);
-  border-radius: 0px 60px 60px 60px;
-  padding: 40px;
   max-width: 686px;
   box-sizing: border-box;
+  border-radius: 0px 60px 60px 60px;
+  padding: 0;
+  height: 0;
+  transition: height 2s, padding 1s, background 1s;
 
-  @media (max-width: $max-mobile-width) {
-    padding: 24px;
-    width: 82vw;
-  }
-}
-
-.step__title {
-  @include margin-bottom(24px);
-
-  @media (max-width: $max-mobile-width) {
-    margin-bottom: 16px;
-  }
-}
-
-.step__text {
-  &:not(:last-child) {
-    @include margin-bottom(20px);
-
-    @media (max-width: $max-mobile-width) {
-      margin-bottom: 8px;
+  &--right {
+    @media (min-width: $max-mobile-width) {
+      border-radius: 60px 0px 60px 60px;
     }
   }
+
+  &--active {
+    background: linear-gradient(180deg, #c0eeff 44.04%, #9dd0ff 107.11%);
+    border: 3px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 10px 0px #5d9fe4, 0px 16px 24px rgba(9, 30, 62, 0.06);
+    height: fit-content;
+    padding: 40px;
+
+    @media (max-width: $max-mobile-width) {
+      margin-top: 59px;
+      padding: 24px;
+      width: 82vw;
+    }
+
+    & .step__title {
+      opacity: 1;
+      @include margin-bottom(24px);
+      font-size: 20px;
+
+      @media (max-width: $max-mobile-width) {
+        margin-bottom: 16px;
+        font-size: 18px;
+      }
+    }
+
+    & .step__text {
+      opacity: 1;
+      font-size: 16px;
+
+      &:not(:last-child) {
+        @include margin-bottom(20px);
+
+        @media (max-width: $max-mobile-width) {
+          margin-bottom: 8px;
+        }
+      }
+    }
+  }
+}
+
+.step__title,
+.step__text {
+  opacity: 0;
+  margin: 0;
+  font-size: 0;
+  transition: opacity 1s;
 }
