--- a/src/sass/global/img-container.scss
+++ b/src/sass/global/img-container.scss
@@ -14,6 +14,7 @@
   @media (max-width: $max-mobile-width) {
     height: 57vw;
     margin-bottom: 32px;
+    width: 100%;
   }
 
   @media (min-width: 1440px) {
