--- a/src/sass/blocks/road-map.scss
+++ b/src/sass/blocks/road-map.scss
@@ -3,6 +3,7 @@
 
   @media (max-width: $max-mobile-width) {
     padding-bottom: 482px;
+    height: max-content;
     margin-bottom: 120px;
   }
 }
