--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "global/button.scss";
 @import "global/text.scss";
 @import "global/img-container.scss";
+@import "global/block-animation.scss";
 
 @import "blocks/main-header.scss";
 @import "blocks/navigation.scss";
