--- a/src/sass/blocks/we-guarantee.scss
+++ b/src/sass/blocks/we-guarantee.scss
@@ -1,8 +1,8 @@
 .we-guarantee {
-  margin-bottom: 160px;
+  padding-top: 160px;
 
   @media (max-width: $max-mobile-width) {
-    margin-bottom: 120px;
+    padding-top: 120px;
   }
 }
 
