--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -1,12 +1,20 @@
 .main-header {
   padding-top: 32px;
+  padding-bottom: 63.26vw;
 
   @media (max-width: $max-mobile-width) {
     padding-top: 12px;
+    padding-bottom: 0;
   }
 
   & .main-header__navigation {
+    position: fixed;
+    z-index: -9;
+    width: calc(100vw - 64px);
+    margin: 0 auto;
+
     @media (max-width: $max-mobile-width) {
+      position: relative;
       z-index: 6;
     }
   }
