Добавляет облока на комп версию и меняет принцип анимации на сайте

--- a/src/sass/blocks/benefit.scss
+++ b/src/sass/blocks/benefit.scss
@@ -6,6 +6,7 @@
   border-radius: 60px;
   padding: 40px;
   box-sizing: border-box;
+  z-index: 5;
 
   @media (max-width: $max-mobile-width) {
     width: 100%;
