--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,7 +9,7 @@
 @import "global/text.scss";
 @import "global/img-container.scss";
 @import "global/block.scss";
-// @import "global/block-animation.scss";
+@import "global/block-animation.scss";
 
 @import "blocks/main-header.scss";
 @import "blocks/navigation.scss";
