--- a/src/sass/blocks/navigation.scss
+++ b/src/sass/blocks/navigation.scss
@@ -39,11 +39,15 @@
       border: 2px solid #f8ab0e;
       padding: 12px 16px;
       height: 100px;
+      transition: 0.5s;
+      transition-delay: 0;
     }
 
     &:hover .language-settings__button {
       font-size: 16px;
       line-height: 24px;
+      transition: 1s;
+      transition-delay: 0.4s;
     }
   }
 
@@ -81,6 +85,10 @@
   &--logo {
     @media (max-width: $max-mobile-width) {
       margin-right: 25%;
+    }
+
+    @media (max-width: 355px) {
+      margin-right: 15%;
     }
   }
 }
