--- a/src/sass/blocks/person-card.scss
+++ b/src/sass/blocks/person-card.scss
@@ -7,6 +7,8 @@
 }
 
 .person-card__img {
+  position: relative;
+  z-index: 5;
   @media (max-width: $max-mobile-width) {
     margin-bottom: 16px;
   }
@@ -23,6 +25,8 @@
 
 .person-card__company-position {
   margin: 0;
+  position: relative;
+  z-index: 5;
 
   @media (max-width: $max-mobile-width) {
     font-size: 12px;
