--- a/src/sass/blocks/step.scss
+++ b/src/sass/blocks/step.scss
@@ -18,6 +18,8 @@
     box-shadow: 0px 10px 0px #5d9fe4, 0px 16px 24px rgba(9, 30, 62, 0.06);
     height: fit-content;
     padding: 40px;
+    position: relative;
+    z-index: 5;
 
     @media (max-width: $max-mobile-width) {
       margin-top: 59px;
