--- a/src/sass/global/text.scss
+++ b/src/sass/global/text.scss
@@ -2,6 +2,8 @@
   font-size: 16px;
   line-height: 145%;
   opacity: 0.8;
+  position: relative;
+  z-index: 5;
 
   &--white {
     color: #ffffff;
