--- a/src/sass/global/page.scss
+++ b/src/sass/global/page.scss
@@ -9,7 +9,7 @@ html {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
-  background: $main-bg-color;
+  background: #53caec;
   color: $main-text-color;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
