--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -4,4 +4,4 @@ $desktop-width: 1200px;
 
 // Colors
 $main-text-color: #3a426b;
-$main-bg-color: #6ddaf9;
+$main-bg-color: linear-gradient(180deg, #50c9eb 0%, #6ddaf9 100%); ;
