--- a/src/sass/blocks/language-settings.scss
+++ b/src/sass/blocks/language-settings.scss
@@ -6,13 +6,14 @@
   border-radius: 24px;
   min-width: 137px;
   height: 0;
-  transition: 1s;
-  transition-delay: 0.4s;
+  transition: 0.5s;
+  transition-delay: 0.15s;
   top: 32px;
   z-index: 1;
 }
 
 .language-settings__lang {
+  height: 0;
   &:not(:last-child) {
     margin-bottom: 12px;
   }
