--- a/src/sass/blocks/navigation.scss
+++ b/src/sass/blocks/navigation.scss
@@ -39,15 +39,19 @@
       border: 2px solid #f8ab0e;
       padding: 12px 16px;
       height: 100px;
-      transition: 0.5s;
+      transition: 0.3s;
       transition-delay: 0;
+    }
+
+    &:hover .language-settings__lang {
+      height: fit-content;
     }
 
     &:hover .language-settings__button {
       font-size: 16px;
       line-height: 24px;
-      transition: 1s;
-      transition-delay: 0.4s;
+      transition: 0.7s;
+      transition-delay: 0.15s;
     }
   }
 
