Изменяет анимацию и отступы на первом экране

--- a/src/sass/blocks/first-screen.scss
+++ b/src/sass/blocks/first-screen.scss
@@ -78,7 +78,7 @@
   margin-bottom: 240px;
 
   @media (max-width: 1440px) {
-    margin-bottom: 10.5vw;
+    margin-bottom: 15.5vh;
   }
 
   @media (max-width: $max-mobile-width) {
