Убирает проблему с отступами на биржах

--- a/src/sass/blocks/first-screen.scss
+++ b/src/sass/blocks/first-screen.scss
@@ -75,6 +75,8 @@
 }
 
 .first-screen__buttons-container {
+  margin-bottom: 10.5vh;
+
   @media (max-width: 1440px) {
     margin-bottom: 4.5vh;
   }
